Graphics2D creatig screen and filling backround to initial black

--- a/SlotTest/MahiGames/index.html
+++ b/SlotTest/MahiGames/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>mahi test</title>
+    <script>var exports = {};</script>
 </head>
 <body>
     <canvas id="canvas" width="800" height="600"></canvas>
