--- a/SlotTest/MahiGames/index.html
+++ b/SlotTest/MahiGames/index.html
@@ -1,14 +1,26 @@
 ﻿<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
     <meta charset="utf-8" />
     <title>mahi test</title>
     <script>var exports = {};</script>
+    <style>
+        html {
+            height: 100%;
+            min-height: 100%;
+        }
+        body {
+            min-height: 100%;
+        }
+        cavnas {
+            min-height: 100%;
+        }
+    </style>
 </head>
 <body>
-    <canvas id="canvas" width="800" height="600"></canvas>
-    basic web page 2
+    <canvas id="canvas" height="100%" width="100%"></canvas>
+
     <script>
         console.log("foo!");
     </script>
@@ -16,7 +28,7 @@
     <script src="application.js"></script> <!-- system lite buulds the app into one js file. Not ideal but necessary-->
     <!--  start scrpt -->
     <script>
-        System.require("apps/System/Graphics2D");
+        System.require("apps/SlotMachine");
     </script>
 </body>
 </html>
