--- a/SlotTest/MahiGames/slot.html
+++ b/SlotTest/MahiGames/slot.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <canvas id="canvas" height="100%" width="100%"></canvas>
+    <canvas id="canvas" ></canvas>
 
     <script>
         console.log("foo!");
